# ltm

./: README.md  bookstore.ltm  jtg.py  ltm.ltm  ltm.py  pyproject.toml  requirements.txt  targetTestOutput.json  testInput.ltm  testMinimal.ltm  testNesting.ltm  util.py
examples/: bookstore-descriptions.ltm  bookstore.ltm  dhl.ltm  doubleNest.ltm  example.txt  report.md
examples/output/: High Level Architecture.dot  Order Received.dot  User buys book.dot  User lists books.dot  User login.dot
src/: jtg.py  ltm.py  ltmParser.py  ltmRenderer.py  mtg.py  temp_test.md  util.py
src/ltm/: ltm.py  ltmRenderer.py  util.py
static/: High Level Architecture.dot  Test  User edits .ltm file.dot  User generates json representation.dot  User renders diagrams  User renders diagrams.dot
