[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ltm"
version = "0.0.1"
authors = [
  { name="Rob", email="hyakuhei@gmail.com" },
]
description = "Lightweight Transactional Modeller"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/hyakuhei/ltm"
"Bug Tracker" = "https://github.com/hyakuhei/ltm/issues"